[MODORDERS-1363]. Fix sonar issues